# WisdomWeb

./: README.md
search-engine/: CMakeLists.txt  README.md
search-engine/.cache/clangd/index/: DictTrie.hpp.3FC96C8DF6790C86.idx  HMMSegment.hpp.B39089CE6D3965AF.idx  Jieba.hpp.649BECECB36E5B34.idx  LocalVector.hpp.2527574DB24AD024.idx  PosTagger.hpp.0049833C9F3CDE6F.idx  StdExtension.hpp.66C39C9F1FA254A8.idx  StringUtil.hpp.3D17FBEC5DDA1979.idx  Trie.hpp.6B3B5C585A2675D8.idx  main.cpp.2C58F3B2B3C9B561.idx  porter2_stemmer.cpp.DC152E2A44CF5B21.idx  search_machine.cpp.5160EE2DBF9DC8DB.idx  string_view.h.346A4592041F293C.idx  test_main.cpp.C431DEDD4BFF2760.idx  tokenization.cpp.70419DDA5B128A90.idx  trie_server.cpp.870FEAF6A5945C8E.idx  wisdom.cpp.681FBF5FB9AABDAC.idx  wisdom.h.6838AC6ABECA363F.idx
search-engine/data/Admin/: trie_chinese.json
search-engine/data/Admin/zjuers.com/: _index.txt
search-engine/data/cpmores/: meta.json
search-engine/include/: porter2_stemmer.h  search_machine.hpp  tokenization.hpp
search-engine/search_server/: package-lock.json  package.json  server.js
search-engine/search_server/data/Admin/: meta.json  trie_english.json
search-engine/src/: main.cpp  search_machine.cpp  tokenization.cpp  trie_server.cpp
storage/: CMakeLists.txt  README.md  crawler_test.jl
storage/include/: index_manager.hpp  inverted_maker.hpp  tokenization.hpp  trie.hpp
storage/src/: index_manager.cpp  inverted_index.cpp  inverted_maker.cpp  load_index.cpp  tokenization.cpp  trie.cpp  trie_index.cpp
storage/storage_server/: sample.txt  server.js
(+266 files in other folders)
